--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -10,5 +10,6 @@
     <input type="text" placeholder="아이디"><br>
     <input type="text" placeholder="비밀번호"><br>
     <button>로그인</button>
+    <script src="/js/home/login.js"></script>
 </body>
 </html>
