--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -12,7 +12,7 @@
         <div class="form">
           <form class="register-form">
             <input id="id" type="text" placeholder="아이디"/>
-            <input id="name" type="text" placeholder="이름"/>
+            <input id="username" type="text" placeholder="이름"/>
             <input id="email" type="email" placeholder="이메일"/>
             <input id="psword" type="password" placeholder="비밀번호"/>
             <input id="psword-confirm" type="password" placeholder="비밀번호 확인"/>
@@ -21,6 +21,6 @@
           </form>
         </div>
     </div>
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/register.js" defer></script>
 </body>
 </html>
